time not working but transmits through server

--- a/gameserver/js/index.html
+++ b/gameserver/js/index.html
@@ -412,7 +412,7 @@
                         document.getElementById("completed").style.display="none";
                         document.getElementById("win1Txt").style.display="block";
                         document.getElementById("numMoves").style.display="block";
-			document.getElementById("numMoves").innerHTML = data[1]; 
+			document.getElementById("numMoves").innerHTML = data[1] + ' ' + data[2]; 
 			console.log(data[1]);
                     }
                     else {
