--- a/gameserver/js/index.html
+++ b/gameserver/js/index.html
@@ -172,7 +172,7 @@
 
     </style>
     <body>
-    <div class="titleText">Block Escape</div>
+    <div class="titleText" align="center">Block Escape</div>
     <div class="table" id="maintable">
         <div class="column">
                 <p>
@@ -203,28 +203,28 @@
                 <input class="button" id="multiBtn" type="button" value="Multiplayer Mode">
         </div>
     </div>
-    <div id="error">Error Logging In/Creating Account</div>
-    <div id="win1Txt">
+    <div id="error"  align="center">Error Logging In/Creating Account</div>
+    <div id="win1Txt"  align="center">
         Player 1 Wins!
     </div>
-    <div id="win2Txt">
+    <div id="win2Txt"  align="center">
         Player 2 Wins!
     </div>
-    <div id="beginner">
+    <div id="beginner"  align="center">
         Difficulty: Beginner
     </div>
-    <div id="average">
+    <div id="average"  align="center">
         Difficulty: Average
     </div>
-    <div id="skilled">
+    <div id="skilled"  align="center">
         Difficulty: Skilled
     </div>
-    <div id="expert">
+    <div id="expert" align="center">
         Difficulty: Expert
     </div>
     <div id="numMoves" align="center">
     </div>
-    <div id="completed">
+    <div id="completed" align="center">
         (Completed)
     </div>
     <div id="boardNumber">
